Prevent video from overflowing main

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -24,7 +24,7 @@ figure {
   margin: 1.5em 0;
 }
 
-figure img {
+figure img, figure video {
   max-width: 100%;
 }
 
